<resources>
    <string name="app_name">Aplikasi Kebutuhan Kalori</string>
    <string name="edit_text_weight_hint">Masukkan berat badan (kg)</string>
    <string name="edit_text_height_hint">Masukkan tinggi badan (cm)</string>
    <string name="edit_text_age_hint">Masukkan usia</string>
    <string name="radio_button_male">Laki-laki</string>
    <string name="radio_button_female">Perempuan</string>
    <string name="button_calculate">Hitung</string>
    <string name="text_view_result">Kebutuhan Kalori:</string>
    <string name="saran">Kebutuhan Kalori:</string>
    <string name="lihat_saran">Lihat Saran</string>
    <string name="bagikan">Bagikan</string>
    <string name="sarantxt">Saran</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
<string name="copyright">CalorieCounter adalah aplikasi penghitung kalori yang inovatif yang dirancang untuk membantu pengguna dalam mengelola asupan kalori mereka dan memberikan saran yang sesuai dengan kebutuhan individu. </string>
    <string name="belum_ada_data">Belum ada data</string>
    <string name="histori">Histori</string>
    <string name="berat_validasi">Berat Tidak boleh kosong</string>
    <string name="tinggi_validasi">Tinggi Tidak boleh kosong</string>
    <string name="umur_validasi">Umur Tidak boleh kosong</string>
    <string name="gender_validasi"> Pilih Gender </string>
    <string name="hasil_kalori"> Calories: 0 </string>
    <string name="kategori_hasil"> Kategori:  </string>
    <string name="txtMale"> Pria </string>
    <string name="txtFemale"> Wanita </string>
    <string name="bagikan_tamplate"> Berat: %1$s kg\nTinggi: %2$s cm\nGender: %3$s kg\n\n%4$s\n%5$s </string>
    <string name="kurang">Kekurangan</string>
    <string name="cukup">Cukup</string>
    <string name="kelebihan">Kelebihan</string>
    <string name="kalori_x">Calorie: %1$.2f</string>
    <string name="kategori_x">Kategori: %1$s</string>
    <string name="hapus_histori">Hapus Histori</string>
    <string name="judul_kurang">Mengatasi Kekurangan</string>
    <string name="judul_cukup">Pertahankan Ini</string>
    <string name="judul_kelebihan">Mengatasi Kelebihan</string>
    <string name="saran_kurang">Pilih makanan tinggi kalori tetapi sehat, seperti alpukat, kacang-kacangan, biji-bijian, dan minyak zaitun.</string>
    <string name="saran_cukup">Pertahankan pola makan yang seimbang dengan memperhatikan asupan karbohidrat, protein, dan lemak yang tepat</string>
    <string name="saran_kelebihan">Kurangi konsumsi makanan dan minuman yang tinggi kalori, seperti makanan olahan, makanan cepat saji, minuman manis, dan camilan tinggi gula.</string>
    <string name="konfirmasi_hapus">konfirmasi_hapus</string>
    <string name="hapus">hapus</string>
    <string name="batal">batal</string>
    <string name="hasil_x">Calorie: %1$.2f - %2$s</string>
    <string name="data_x">BB: %1$.1f - TB: %2$.1f - %3$s</string>
</resources>